--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carga de notas de tres alumnos</title>
+    <title>Sistema de carga de alumnos</title>
 </head>
 <body>
     <script src="./scripts/script.js"></script>
