--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <title>Sistema de carga de alumnos</title>
 </head>
 <body>
-    <h1>Sistema de Carga de Notas</h1>
+    <header>
+        <h1>Sistema de Carga de Notas</h1>
+    </header>
     <div class="cargaAlumno">
         <h2>Cargar nuevo alumno</h2>
         <form id="formularioAlumnos">
             <div class="cargaAlumno_info">
                 <ul class="info">
+                    <li>
+                        <h3>Id: </h3>
+                        <input type="number" id="numId" placeholder="Ingrese un Id">
+                    </li>
                     <li>
                         <h3>Apellido: </h3>
                         <input type="text" id="apellido" placeholder="Ingrese un apellido">
@@ -41,22 +48,25 @@
         </form>
         
     </div>
-    <br>
-    <h2>Alumnos Cargados</h2>
-    <table id="tablaAlumnos">
-        <thead>
-            <tr>
-                <th>Apellido</th>
-                <th>Nombre</th>
-                <th>1° Nota</th>
-                <th>2° Nota</th>
-                <th>3° Nota</th>
-            </tr>
-        </thead>
-        <tbody>
-
-        </tbody>
-    </table>
+    <div class="tablaCarga">
+        <h2>Alumnos Cargados</h2>
+        <table id="tablaAlumnos">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Apellido</th>
+                    <th>Nombre</th>
+                    <th>1° Nota</th>
+                    <th>2° Nota</th>
+                    <th>3° Nota</th>
+                </tr>
+            </thead>
+            <tbody>
+    
+            </tbody>
+        </table>
+    </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
